; ModuleID = '/home/carl/AnghaBench/libui/_abort/windowevents/extr_page15.c_updatepos.c'
source_filename = "/home/carl/AnghaBench/libui/_abort/windowevents/extr_page15.c_updatepos.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@x = common dso_local global i32 0, align 4
@y = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @updatepos to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @updatepos(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32* %0, i32** %2, align 8
  %5 = load i32*, i32** %2, align 8
  %6 = call i32 @uiWindowPosition(i32* %5, i32* %3, i32* %4)
  %7 = load i32, i32* @x, align 4
  %8 = load i32, i32* %3, align 4
  %9 = call i32 @uiSpinboxSetValue(i32 %7, i32 %8)
  %10 = load i32, i32* @y, align 4
  %11 = load i32, i32* %4, align 4
  %12 = call i32 @uiSpinboxSetValue(i32 %10, i32 %11)
  ret void
}

declare dso_local i32 @uiWindowPosition(i32*, i32*, i32*) #1

declare dso_local i32 @uiSpinboxSetValue(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
